Fix jumpy cancel button

--- a/app/assets/stylesheets/components/fullscreen-table.scss
+++ b/app/assets/stylesheets/components/fullscreen-table.scss
@@ -114,7 +114,8 @@ body.with-fullscreen {
       top: 20px;
     }
 
-    .file-upload-button {
+    .file-upload-button,
+    .file-upload-button-cancel {
       margin: 0 0 0 $gutter-half;
     }
 
